@@ -1,0 +1,3 @@
+*   Ref.: OpenGL (4.3) compute shader example
+    *   http://wili.cc/blog/opengl-cs.html
+    *   http://wili.cc/blog/entries/opengl-cs/ogl_cs_example.tar.gz
